--- a/finder-app/Makefile
+++ b/finder-app/Makefile
@@ -1,6 +1,6 @@
 # Compiler and CFlAGS selection 'CROSS_COMPILE' is used to set custom arm compiler
 CC := $(CROSS_COMPILE)gcc
-CFLAGS := -Wall -WERROR
+CFLAGS := -Wall -Werror
 
 # Sets the source as writer.c and object as writer.o
 SRC := writer.c
