--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,7 +1,11 @@
 name: assignment-test
 
-on:
-  push:
+on: 
+    push:
+        tags-ignore:
+            - '*'
+        branches:
+            - '*'
 
 jobs:
   unit-test:
