Added pthread flag to make

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,6 +1,6 @@
 # Compiler and CFlAGS selection 'CROSS_COMPILE' is used to set custom arm compiler
 CC ?= $(CROSS_COMPILE)gcc
-CFLAGS := -Wall -Werror
+CFLAGS := -Wall -Werror -pthread
 
 # Sets the source as writer.c and object as writer.o
 SRC := aesdsocket.c
